# ACT

./: .env.example  .gitignore  README.md  RPG.md  app.py  bad_words.py  db.py  gemini.py  main.py  nohup-25-11-24.out  nohup.out  pyproject.toml  requirements.txt  test.ipynb  test.py  xp_data.json
.github/workflows/: deploy-pi.yml  deploy.yml
api/: main.py  routes.py
api/routers/: activa_router.py  actor_router.py  default_router.py  guild_router.py  member_router.py
bot/: ai.py  ai.toml  filter.py  filter.txt  main.py  test.py  ui.py
bot/cogs/: act_cog.py  ai_cog.py  ai_cog.toml  audio_cog.py  board.py  board_cog.py  combat_cog.py  console_cog.py  farm.py  farm_cog.py  filter_cog.py  gift_cog.py  help_cog.py  item_cog.py  purge_cog.py  test_cog.py
bot/cogs/chat_cogs/: ai_cog.py  ai_cog.toml  filter_cog.py
bot/cogs/game_cogs/: combat_cog.py  exchange_cog.py  farm_cog.py  inventory_cog.py  items_cog.py  leaderboard_cog.py  profile_cog.py  table_cog.py
bot/ui/: embed.py  modal.py  view.py
comon-bank/: bot.py
core/: main.py
core/commands/crime/: heist.py  rob_bank.py  shoot.py  steal.py
core/commands/economy/: balance.py  buy.py  gift.py  inventory.py  open_box.py  store.py
core/commands/general/: help.py  tact.py
core/commands/leveling/: give_xp.py  leaderboard.py  level.py  reset_level.py  reset_xp.py
core/commands/reward/: claim_daily.py  claim_hourly.py
core/events/: on_message.py  on_ready.py
core/services/: bad_words.py  db.py  paginator.py
db/: Item.py  actor.py  attack.py  item.py  main.py  model.py  persona.py  rank.py  room.py  stat.py
db/data/: cookies.txt  items.toml  personas.toml  ranks.toml  stats.toml
deployment/: DEPLOYMENT.md  QUICK_START.md  README.md  SSH_SETUP.md  act-bot.service  setup-pi.sh
env/: pyvenv.cfg
tact_api/: asgi.py  settings.py  urls.py  wsgi.py
utils/: ai.py  audio.py  file.py  log.py  misc.py  task.py  xp.py
web-api/proj/: settings.py
z_assets/activa/: username.txt
z_assets/docs/: RPG.md
z_test/: _ai.ipynb  _ai_output.py  _bot.ipynb  _db.ipynb  _discord.ipynb  _gameplay.ipynb  _gemini.ipynb  _gemini_output.py  _items.md  _mongodb.ipynb  _rpg.ipynb  _utils.ipynb
